# Objektinis3

./: CMakeLists.txt  Libr.h  README.md  Str.h  V0.2  V0.3 cpp  V0.4  V0_3.cpp  V0_4.cpp  V1.0 deque  V1.0 list  V1.0 vector  V1.1 cmake.cpp  V1.2.cpp  V1.5.cpp  V3.0.cpp  func.cpp  func.h  person.h  studentas.h  v.pradinis.cpp  v0.1  v0.1.1C  v0.1.1V  vector.h
V0_3/: Libr.h  kursiokai.txt  studentai.txt
Vektoriai/: Vektoriai.cbp  main.cpp
v.pradinis/: v.pradinis.cpp
v0.1/: main.cpp  v0.1.layout
